--- a/contactemail.html
+++ b/contactemail.html
@@ -126,9 +126,9 @@
         }
     </script>
 
-    <footer>
-        © 2024 Created by Yuya.I
-    </footer>
+<footer class="footer">
+    <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
