--- a/guide.html
+++ b/guide.html
@@ -144,8 +144,8 @@
         <button class="back-button" onclick="goBack()">戻る</button>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Created by Yuya.I</p>
+    <footer class="footer">
+        <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
     </footer>
 
     <script>
