--- a/priv.html
+++ b/priv.html
@@ -142,8 +142,8 @@
         <a href="javascript:history.back()" class="back-button">戻る</a>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Created by Yuya.I</p>
+    <footer class="footer">
+        <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
     </footer>
 </body>
 </html>
