--- a/support.html
+++ b/support.html
@@ -151,8 +151,8 @@
         <button class="back-button" onclick="goBack()">前のページに戻る</button>
     </div>
 
-    <footer>
-        <p>&copy; 2024 サポートセンター - by Yuya.I</p>
+    <footer class="footer">
+        <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
     </footer>
 
     <script>
