--- a/version.html
+++ b/version.html
@@ -117,8 +117,8 @@
 
     <footer>
         <button onclick="goBack()">ホームに戻る</button>
-        <footer>
-            <p>&copy; 2024 Created by Yuya.I</p>
+        <footer class="footer">
+            <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
         </footer>
     </footer>
 
