--- a/member.html
+++ b/member.html
@@ -587,6 +587,9 @@ onAuthStateChanged(auth, async (user) => {
 
 
     </script>
+    <footer class="footer">
+        <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
+    </footer>
 </head>
 <body>
 
