--- a/webusing.html
+++ b/webusing.html
@@ -156,10 +156,9 @@
         <button class="back-button" onclick="goBack()">戻る</button>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Created by Yuya.I</p>
+    <footer class="footer">
+        <p>© 2024 みんなの活字化広場 All Rights Reserved.</p>
     </footer>
-
     <script>
         function goBack() {
             window.history.back();
