--- a/admin.html
+++ b/admin.html
@@ -163,7 +163,7 @@
                 <h2>管理機能</h2>
                 <a href="upload.html" class="link-button">原稿を投稿する</a>
                 <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
-                
+                <a href="folderlock.html" class="link-button">ファイルデータの非表示設定</a>
                 <a href="export.html" class="link-button">データ出力 for Excel</a>
                 <a href="allsarch.html" class="link-button">資料検索システム</a>
                 <a href="auth.html" class="link-button">ログイン履歴管理システム</a>
