--- a/project.html
+++ b/project.html
@@ -2,12 +2,9 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="position.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プロジェクト一覧</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #000428;
@@ -45,24 +42,21 @@
             100% { opacity: 1; }
         }
 
-        .folder-card, .image-card {
+        .folder-card {
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            border: 1px solid transparent;
-            transition: transform 0.4s ease, box-shadow 0.4s ease, border-color 0.4s ease;
-            cursor: pointer;
             width: calc(25% - 40px);
             max-width: 300px;
             position: relative;
             overflow: hidden;
             backdrop-filter: blur(10px);
+            cursor: pointer;
         }
 
-        .folder-card:hover, .image-card:hover {
+        .folder-card:hover {
             transform: translateY(-10px);
             box-shadow: 0 10px 30px rgba(255, 255, 255, 0.4);
-            border-color: #00d4ff;
         }
 
         .folder-info {
@@ -73,40 +67,6 @@
             color: #00d4ff;
             background-color: rgba(0, 0, 0, 0.6);
             border-top: 2px solid #00d4ff;
-        }
-
-        .image-list-header {
-            width: 100%;
-            padding: 20px;
-            font-size: 24px;
-            font-weight: 600;
-            background-color: rgba(0, 0, 0, 0.6);
-            color: #00d4ff;
-            text-align: center;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #00d4ff;
-            animation: textFadeIn 3s ease-in-out 1s forwards;
-        }
-
-        .image-card img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            border-bottom: 2px solid #00d4ff;
-            opacity: 0.9;
-            transition: opacity 0.3s ease;
-        }
-
-        .image-card img:hover {
-            opacity: 1;
-        }
-
-        .image-name {
-            padding: 15px;
-            text-align: center;
-            font-size: 16px;
-            font-weight: 500;
-            color: #00d4ff;
         }
 
         .button-container {
@@ -134,6 +94,39 @@
         .hidden {
             display: none;
         }
+
+        #image-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
+        .image-card {
+            width: 120px;
+            text-align: center;
+            margin-bottom: 15px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            padding: 10px;
+            backdrop-filter: blur(5px);
+        }
+
+        .image-card img {
+            max-width: 100px;
+            max-height: 100px;
+            border-radius: 8px;
+            object-fit: cover;
+        }
+
+        .image-name {
+            color: #fff;
+            font-size: 12px;
+            margin-top: 5px;
+            white-space: normal;  /* 改行可能にしてファイル名をすべて表示 */
+            word-wrap: break-word; /* 長すぎるファイル名が改行される */
+        }
+
     </style>
 </head>
 <body>
@@ -162,7 +155,6 @@
 
         const app = initializeApp(firebaseConfig);
         const storage = getStorage(app);
-
         const gallery = document.getElementById('gallery');
         const imageList = document.getElementById('image-list');
         const folderHeader = document.getElementById('folder-header');
@@ -171,26 +163,20 @@
         async function loadProjects() {
             const rootRef = ref(storage, '');
             const folders = await listAll(rootRef);
-
-            // ローカルストレージから非表示設定を取得
-            const folderSettings = JSON.parse(localStorage.getItem('folderSettings')) || {};
+            const savedSettings = JSON.parse(localStorage.getItem('folderSettings')) || {};
 
             const folderPromises = folders.prefixes.map(async folder => {
                 const imagesRef = ref(storage, folder.fullPath);
                 const images = await listAll(imagesRef);
-                return { folderName: folder.name, imageCount: images.items.length, images: images.items };
-            });
+                const folderName = folder.name;
 
-            const folderData = await Promise.all(folderPromises);
-
-            folderData.forEach(folder => {
-                // 非表示設定が有効なフォルダをスキップ
-                if (folderSettings[folder.folderName] === false) return;
-
-                if (folder.imageCount > 0) {
-                    createFolderCard(folder.folderName, folder.imageCount, folder.images);
+                // 保存された設定に基づいて表示するかどうかを決定
+                if (savedSettings[folderName] !== false) {
+                    createFolderCard(folderName, images.items.length, images.items);
                 }
             });
+
+            await Promise.all(folderPromises);
         }
 
         function createFolderCard(folderName, imageCount, images) {
@@ -225,24 +211,29 @@
                 const img = document.createElement('img');
                 img.src = url;
                 img.alt = `Image ${index + 1}`;
-                imageCard.appendChild(img);
 
                 const imageName = document.createElement('div');
                 imageName.className = 'image-name';
-                imageName.textContent = `Image ${index + 1}`;
+                imageName.textContent = images[index].name;
+                imageCard.appendChild(img);
                 imageCard.appendChild(imageName);
-
                 imageList.appendChild(imageCard);
+
+                imageCard.addEventListener('click', () => {
+                    window.location.href = `text_entry_page.html?image=${encodeURIComponent(url)}`;
+                });
             });
         }
 
         backButton.addEventListener('click', () => {
-            imageList.style.display = 'none';
-            backButton.classList.add('hidden');
             gallery.style.display = 'flex';
+            backButton.classList.add('hidden');
+            imageList.style.display = 'none';
         });
 
         loadProjects();
     </script>
+    <button onclick="location.href='member.html'">メンバーページに戻る</button>
 </body>
 </html>
+
