--- a/text_entry_page.html
+++ b/text_entry_page.html
@@ -390,7 +390,7 @@
         document.getElementById('save-legend').addEventListener('click', saveData);
 
         document.getElementById('back-to-project').addEventListener('click', () => {
-    window.history.go(-1);
+    window.history.back();
 });
 
 
