--- a/admin.html
+++ b/admin.html
@@ -162,7 +162,7 @@
             <section class="links">
                 <h2>管理機能</h2>
                 <a href="upload.html" class="link-button">原稿を投稿する</a>
-                <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
+                <a href="adminreport.html" class="link-button">作業報告書</a>
                 <a href="folderlock.html" class="link-button">ファイルデータの非表示設定</a>
                 <a href="export.html" class="link-button">データ出力 for Excel</a>
                 <a href="allsarch.html" class="link-button">資料検索システム</a>
