--- a/member.html
+++ b/member.html
@@ -244,7 +244,7 @@
         <div class="button-container">
             <a href="allsarch.html" class="rainbow-button">資料検索システム</a>
             <a href="qr.html" class="rainbow-button">モバイル版サイト</a>
-            <a href="#" class="rainbow-button">準備中</a>
+            <a href="report.html" class="rainbow-button">作業報告書作成</a>
         </div>
 
        
