--- a/folderlock.html
+++ b/folderlock.html
@@ -77,7 +77,7 @@
     <div class="folder-list" id="folder-list"></div>
     <div class="button-container">
         <button class="button" id="save-button">設定を保存</button>
-        <button class="button" onclick="location.href='project_list.html'">プロジェクト一覧に戻る</button>
+        <button class="back-button" onclick="goBack()">戻る</button>
     </div>
     <div id="alert-message" class="alert-success" style="display: none;">設定が保存されました。</div>
 
@@ -154,6 +154,14 @@
         document.getElementById('save-button').addEventListener('click', saveSettings);
 
         loadFolders();
+
+       
+    
+    </script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
     </script>
 </body>
 </html>
