--- a/adminreport.html
+++ b/adminreport.html
@@ -100,6 +100,7 @@
                     const data = doc.data();
                     const row = document.createElement("tr");
 
+                    // 修正した部分: innerHTML の書き方
                     row.innerHTML = `
                         <td>${data.username}</td>
                         <td>${data.email}</td>
@@ -122,3 +123,4 @@
     </script>
 </body>
 </html>
+
