--- a/member.html
+++ b/member.html
@@ -179,6 +179,7 @@
         .rainbow-button:nth-child(1) { background: linear-gradient(135deg, #ff0000, #ff7300); }
         .rainbow-button:nth-child(2) { background: linear-gradient(135deg, #ffea00, #33cc00); }
         .rainbow-button:nth-child(3) { background: linear-gradient(135deg, #00aaff, #a000ff); }
+        .rainbow-button:nth-child(4) { background: linear-gradient(135deg, #ecfbe7, #c5d123); }
 
         .rainbow-button:hover {
             transform: scale(1.1);
@@ -243,8 +244,9 @@
 
         <div class="button-container">
             <a href="allsarch.html" class="rainbow-button">資料検索システム</a>
-            <a href="qr.html" class="rainbow-button">モバイル版サイト</a>
+            <a href="aiueo.html" class="rainbow-button">五十音表</a>
             <a href="report.html" class="rainbow-button">作業報告書作成</a>
+            <a href="qr.html" class="rainbow-button">モバイル版サイト</a>
         </div>
 
        
