--- a/member.html
+++ b/member.html
@@ -246,7 +246,7 @@
             <a href="allsarch.html" class="rainbow-button">資料検索システム</a>
             <a href="aiueo.html" class="rainbow-button">五十音表</a>
             <a href="report.html" class="rainbow-button">作業報告書作成</a>
-            <a href="qr.html" class="rainbow-button">モバイル版サイト</a>
+            <a href="ocrsystem.html" class="rainbow-button">OCR試験運用</a>
         </div>
 
        
